<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BathUniApp</string>
    <string name="full_name">Name:</string>
    <string name="username">Username:</string>
    <string name="faculty">Faculty:</string>
    <string name="department">Department:</string>
    <string name="year">Year:</string>
    <string name="bus_route">Bus Route:</string>

    <string-array name="faculty_array">
        <item>Engineering</item>
        <item>Humanities and Social Sciences</item>
        <item>Science</item>
    </string-array>

    <string-array name="course_science_array">
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Computer Science</item>
        <item>Mathematics</item>
        <item>Pharmacy</item>
        <item>Physics</item>
    </string-array>

    <string-array name="course_engineering_array">
        <item>Architecture</item>
        <item>Chemical</item>
        <item>Electronic</item>
        <item>Mechanical</item>
    </string-array>
    
    <string-array name="course_humanities_array">
        <item>Economics</item>
        <item>Education</item>
        <item>Health</item>
        <item>Politics</item>
        <item>Psychology</item>
    </string-array>
    
    <string-array name="year_array">
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
    </string-array>
    
    <string-array name="bus_route_array">
        <item>18</item>
        <item>U18</item>
        <item>X18</item>
        <item>U10</item>
        <item>10</item>
    </string-array>
    
    <string-array name="bus_route_type_array">
        <item>Term Weekday</item>
        <item>Term Weekend</item>
        <item>Holiday Weekday</item>
        <item>Holiday Weekend</item>
    </string-array>
    
    <string-array name="stops_18">
        <item>University of Bath</item>
        <item>Bus Station [dep]</item>
        <item>Oldfield Park</item>
        <item>Bus Station [ret]</item>
        <item>University</item>
    </string-array>
    
    <string-array name="stops_U18">
        <item>Lower Oldfield Park</item>
        <item>Corn Street</item>
        <item>High Street</item>
        <item>Youth Hostel North</item>
        <item>University of Bath</item>
        <item>Youth Hostel South</item>
        <item>North Parade</item>
    </string-array>
    
    <string-array name="stops_X18">
        <item>University of Bath</item>
        <item>Bathwick Hill</item>
        <item>Oldfield Park</item>
    </string-array>
    
    <string-array name="stops_U10">
        <item>University of Bath</item>
        <item>Youth Hostel</item>
        <item>Bathwich Terrace</item>
        <item>Oldfield Park</item>
        <item>Moorland road</item>
        <item>Bathwich Terrace</item>
    </string-array>
   
    <string-array name="stops_10">
        <item>Bus Station</item>
        <item>Kingsway Post Office [dep]</item>
        <item>Southdown</item>
        <item>Kingsway Post Office [ret]</item>
        <item>Bus Station</item>
    </string-array>

    <string-array name="empty_array"></string-array>
    
    <string-array name="bus_times_array">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item> 
    </string-array>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="blue">#33B5E5</color>
    <color name="list_background">#3033B5E5</color>

</resources>
